// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts valid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="AddEmailAddress-description"
  >
    For your added security, we require users to add an email address to their accounts.
Your email address will be used to:
  </div>
  <ul
    className="UnorderedList-root"
  >
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Receive updates regarding any changes to your account
(email address, username, password, etc.)
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Allow you to download your comments.
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Send comment notifications that you have chosen to receive.
        </div>
      </div>
    </li>
  </ul>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorStreamBlue"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email address"
          type="email"
          value="hans@test.com"
        />
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm email address"
          type="text"
          value=""
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="AddEmailAddress-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add email address
    </button>
  </div>
</form>
`;

exports[`checks for invalid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="AddEmailAddress-description"
  >
    For your added security, we require users to add an email address to their accounts.
Your email address will be used to:
  </div>
  <ul
    className="UnorderedList-root"
  >
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Receive updates regarding any changes to your account
(email address, username, password, etc.)
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Allow you to download your comments.
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Send comment notifications that you have chosen to receive.
        </div>
      </div>
    </li>
  </ul>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email address"
          type="email"
          value="invalid-email"
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            Please enter a valid email address.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm email address"
          type="text"
          value="invalid-confirmation-email"
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            Emails do not match. Try again.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="AddEmailAddress-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add email address
    </button>
  </div>
</form>
`;

exports[`renders addEmailAddress view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="addEmailAddress-container"
    >
      <div
        className="coral coral-login-bar AddEmailAddress-bar"
        role="banner"
      >
        <div
          className="coral coral-login-title AddEmailAddress-title"
        >
          Add email address
        </div>
      </div>
      <main
        className="Main-root"
        data-testid="addEmailAddress-main"
        id="add-email-main"
      >
        <form
          autoComplete="off"
          onSubmit={[Function]}
        >
          <div
            className="AddEmailAddress-description"
          >
            For your added security, we require users to add an email address to their accounts.
Your email address will be used to:
          </div>
          <ul
            className="UnorderedList-root"
          >
            <li
              className="ListItem-root"
            >
              <div
                className="ListItem-leftCol"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  done
                </i>
              </div>
              <div>
                <div
                  className="AddEmailAddress-description"
                >
                  Receive updates regarding any changes to your account
(email address, username, password, etc.)
                </div>
              </div>
            </li>
            <li
              className="ListItem-root"
            >
              <div
                className="ListItem-leftCol"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  done
                </i>
              </div>
              <div>
                <div
                  className="AddEmailAddress-description"
                >
                  Allow you to download your comments.
                </div>
              </div>
            </li>
            <li
              className="ListItem-root"
            >
              <div
                className="ListItem-leftCol"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  done
                </i>
              </div>
              <div>
                <div
                  className="AddEmailAddress-description"
                >
                  Send comment notifications that you have chosen to receive.
                </div>
              </div>
            </li>
          </ul>
          <div
            className="coral coral-login-field AddEmailAddress-field"
          >
            <div
              className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
            >
              <label
                className="InputLabel-root"
                htmlFor="email"
              >
                Email address
              </label>
              <div
                className="TextField-root TextField-fullWidth"
              >
                <input
                  className="TextField-input TextField-colorStreamBlue"
                  disabled={false}
                  id="email"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Email address"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="coral coral-login-field AddEmailAddress-field"
          >
            <div
              className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
            >
              <label
                className="InputLabel-root"
                htmlFor="confirmEmail"
              >
                Confirm email address
              </label>
              <div
                className="TextField-root TextField-fullWidth"
              >
                <input
                  className="TextField-input TextField-colorStreamBlue"
                  disabled={false}
                  id="confirmEmail"
                  name="confirmEmail"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Confirm email address"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="AddEmailAddress-actions"
          >
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
              data-variant="filled"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Add email address
            </button>
          </div>
        </form>
      </main>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="AddEmailAddress-description"
  >
    For your added security, we require users to add an email address to their accounts.
Your email address will be used to:
  </div>
  <ul
    className="UnorderedList-root"
  >
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Receive updates regarding any changes to your account
(email address, username, password, etc.)
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Allow you to download your comments.
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Send comment notifications that you have chosen to receive.
        </div>
      </div>
    </li>
  </ul>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email address"
          type="email"
          value=""
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm email address"
          type="text"
          value=""
        />
      </div>
      <div
        className="ValidationMessage-root"
        role="alert"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon ValidationMessage-icon"
          >
            error
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="AddEmailAddress-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add email address
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="AddEmailAddress-description"
  >
    For your added security, we require users to add an email address to their accounts.
Your email address will be used to:
  </div>
  <ul
    className="UnorderedList-root"
  >
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Receive updates regarding any changes to your account
(email address, username, password, etc.)
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Allow you to download your comments.
        </div>
      </div>
    </li>
    <li
      className="ListItem-root"
    >
      <div
        className="ListItem-leftCol"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon"
        >
          done
        </i>
      </div>
      <div>
        <div
          className="AddEmailAddress-description"
        >
          Send comment notifications that you have chosen to receive.
        </div>
      </div>
    </li>
  </ul>
  <div
    className="coral coral-login-errorContainer AddEmailAddress-error"
  >
    <div
      className="CallOut-root CallOut-error CallOut-leftBorder coral coral-login-error"
    >
      <div
        className="CallOut-container"
      >
        <div
          className="CallOut-icon CallOut-error CallOut-leftIcon"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon"
          >
            error
          </i>
        </div>
        <div
          className="CallOut-content"
        >
          <div
            className="CallOut-title CallOut-titleBold"
          >
            server error

GraphQL request:4:3
3 | ) {
4 |   setEmail(input: $input) {
  |   ^
5 |     user {
          </div>
          <div
            className="CallOut-body"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorStreamBlue"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email address"
          type="email"
          value="hans@test.com"
        />
      </div>
    </div>
  </div>
  <div
    className="coral coral-login-field AddEmailAddress-field"
  >
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm email address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorStreamBlue"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm email address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
  </div>
  <div
    className="AddEmailAddress-actions"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeMedium Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeMedium Button-colorPrimary Button-upperCase Button-fullWidth"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add email address
    </button>
  </div>
</form>
`;
